tests/cases/should_fail/issue_449/case.hash
// Should report that it unexpectedly encountered `=`
<=>a
