tests/cases/should_fail/issue_449/case.stderr
error: unexpectedly encountered a `=`
 --> $DIR/case.hash:2:2
1 |   // Should report that it unexpectedly encountered `=`
2 |   <=>a
  |    ^ here
  = help: consider adding a `>`
